Added username search and insert User in service package

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>HikariCP</artifactId>
             <version>5.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
